# Linux_-

./: CMakeLists.txt  README.md  arm-linux-gnueabihf.cmake  linux_gatewat_compile.sh
.cache/clangd/index/: can.c.45A143592D921671.idx  can.c.9BF1599BD0D90C2B.idx  can.h.7055ACEA1CB210ED.idx  can.h.9C7181569437CC61.idx  can_anayse.c.5EF587C10C69EB36.idx  can_anayse.c.71D93A65160DE1BE.idx  can_anayse.h.90BD551D81A356F4.idx  can_anayse.h.D1EA850BE496D9E8.idx  crc.c.F49AE2E1DA2D0626.idx  crc.c.F50AB679694F35A0.idx  crc.h.46834482986F45BB.idx  crc.h.EAC2403728DB08AF.idx  ledApp.c.4357AE01924DF53A.idx  ledApp.c.EFB1C4B9AFA582AB.idx  ledApp.h.1F42E3268908DB99.idx  ledApp.h.DDA534CA0EC60250.idx  main.c.3D043CFEC778F3D0.idx  main.c.72BABD58076B37C0.idx
analyis/: CMakeLists.txt  can_anayse.c  can_anayse.h
libcan/: CMakeLists.txt  can.c  can.h
libcrc/: CMakeLists.txt  crc.c  crc.h
libled/: CMakeLists.txt  ledApp.c  ledApp.h
src/: CMakeLists.txt  main.c
